<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/frameLayout" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".LoginFragment">

    <EditText android:id="@+id/email" android:layout_width="347dp" android:layout_height="61dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:inputType="textPersonName" android:hint="@string/Email" android:ems="10" android:layout_marginTop="16dp"/>

    <EditText android:id="@+id/password" android:layout_width="343dp" android:layout_height="63dp" app:layout_constraintStart_toStartOf="@+id/email" app:layout_constraintEnd_toEndOf="@+id/email" android:inputType="textPassword" android:hint="@string/password" android:ems="10" app:layout_constraintVertical_bias="0.025" app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintBottom_toBottomOf="parent"/>

    <Button android:id="@+id/login" android:layout_width="0dp" android:layout_height="49dp" app:layout_constraintStart_toStartOf="@+id/password" app:layout_constraintEnd_toEndOf="@+id/password" app:layout_constraintVertical_bias="0.06" app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.415" android:text="@string/Login"/>

    <Button android:id="@+id/NewAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="@+id/login" app:layout_constraintEnd_toEndOf="@+id/login" app:layout_constraintVertical_bias="0.077" app:layout_constraintTop_toBottomOf="@+id/login" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.496" android:text="@string/createacc"/>

</androidx.constraintlayout.widget.ConstraintLayout>