<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/frameLayout2" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".RegisterFragment">

    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="311dp"
        android:layout_height="48dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText android:id="@+id/pwdRegister" android:layout_width="312dp" android:layout_height="56dp" app:layout_constraintStart_toStartOf="@+id/emailRegister" app:layout_constraintEnd_toEndOf="@+id/emailRegister" android:inputType="textPersonName" android:hint="@string/password" android:ems="10" android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/emailRegister" android:minHeight="48dp"/>

    <Button android:id="@+id/register" android:layout_width="301dp" android:layout_height="48dp" app:layout_constraintStart_toStartOf="@+id/pwdRegister" app:layout_constraintEnd_toEndOf="@+id/pwdRegister" android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/pwdRegister" app:layout_constraintHorizontal_bias="0.491" android:text="@string/submit"/>

    <Button android:id="@+id/back" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="@+id/register" android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/register" android:text="@android:string/cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>